--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -11,6 +11,7 @@
 
 :host{
   display: flex;
+  display: -webkit-flex;
 }
 
 #content {
